--- a/build.gradle
+++ b/build.gradle
@@ -3,8 +3,8 @@ buildscript {
     ext{
 
         minSdkVersion = 21
-        targetSdkVersion = 30
-        compileSdkVersion = 30
+        targetSdkVersion = 31
+        compileSdkVersion = 31
 
         // App dependencies
         appCompatVersion = "1.2.0"
@@ -15,9 +15,9 @@ buildscript {
         fragmentVersion = "1.3.0-beta01"
         gradleVersion = "7.0.4"
         hiltAndroidXVersion = "1.0.0-alpha02"
-        hiltVersion = "2.28.3-alpha"
+        hiltVersion = "2.40"
         junitVersion = "4.13.1"
-        kotlinVersion = "1.5.20"
+        kotlinVersion = "1.6.0"
         ktxVersion = "1.3.2"
         lifecycleVersion = "2.2.0"
         materialVersion = "1.3.0-alpha03"
